# All the -I arguments
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
# The OpenRTI implementation files and may be build generated sources
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/OpenRTI)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/OpenRTI)

# The standalone main server application
ADD_EXECUTABLE(rtinode rtinode.cpp)
IF(OPENRTI_INSTALL_WITH_RPATH)
  SET_PROPERTY(TARGET rtinode PROPERTY INSTALL_RPATH "${CMAKE_INSTALL_FULL_LIBDIR}")
# SET_PROPERTY(TARGET rtinode PROPERTY INSTALL_RPATH "$\{ORIGIN\}/../${CMAKE_INSTALL_LIBDIR}")
ENDIF()
TARGET_LINK_LIBRARIES(rtinode OpenRTI)

INSTALL(TARGETS rtinode
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
