INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/OpenRTI)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/OpenRTI)

ADD_EXECUTABLE(socketaddress socketaddress.cpp)
TARGET_LINK_LIBRARIES(socketaddress OpenRTI)

IF(OPENRTI_ENABLE_PROJECT_FOLDERS)
  SET_PROPERTY(TARGET socketaddress PROPERTY FOLDER "Tests")
ENDIF(OPENRTI_ENABLE_PROJECT_FOLDERS)

ADD_TEST(OpenRTI/socketaddress "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/socketaddress")

ADD_EXECUTABLE(url url.cpp)
TARGET_LINK_LIBRARIES(url OpenRTI)

IF(OPENRTI_ENABLE_PROJECT_FOLDERS)
  SET_PROPERTY(TARGET url PROPERTY FOLDER "Tests")
ENDIF(OPENRTI_ENABLE_PROJECT_FOLDERS)

ADD_TEST(OpenRTI/url "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/url")
