INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/OpenRTI)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/OpenRTI)

ADD_EXECUTABLE(threads threads.cpp)
TARGET_LINK_LIBRARIES(threads OpenRTI)

IF(OPENRTI_ENABLE_PROJECT_FOLDERS)
  SET_PROPERTY(TARGET threads PROPERTY FOLDER "Tests")
ENDIF(OPENRTI_ENABLE_PROJECT_FOLDERS)

ADD_TEST(OpenRTI/threads-1 "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/threads")

